RESOLVED FIXED257705
[Curl] Proxy authentication during CONNECT request is not working after 256639@main.
https://bugs.webkit.org/show_bug.cgi?id=257705
Summary [Curl] Proxy authentication during CONNECT request is not working after 25663...
Kenji Shukuwa
Reported 2023-06-05 01:04:04 PDT
Proxy authentication does not work after 256639@main. If CURLINFO_HTTP_CONNECTCODE is 407, invokeDidReceiveResponse() should be called to handle proxy authentication (NetworkDataTaskCurl::tryProxyAuthentication). --- CurlRequest::didCompleteTransfer() ==> CurlRequest::invokeDidReceiveResponse() ==> NetworkDataTaskCurl::curlDidReceiveResponse() ==> NetworkDataTaskCurl::tryProxyAuthentication() ---
Attachments
Kenji Shukuwa
Comment 1 2023-06-05 01:16:46 PDT
Kenji Shukuwa
Comment 2 2023-06-05 06:38:19 PDT
Comment 0 was not an accurate description. Correctly, proxy authentication for CONNECT requests is no longer working. If you get a proxy authentication (407) response after sending a CONNECT request to the proxy server, Proxy authentication processing was performed before 256639@main, but an error occurs after 256639@main. Major browsers handle proxy authentication responses to CONNECT requests. So, fix it so that the curl port can also perform proxy authentication.
EWS
Comment 3 2023-06-05 13:57:10 PDT
Committed 264874@main (be820d76b164): <https://commits.webkit.org/264874@main> Reviewed commits have been landed. Closing PR #14664 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2023-06-05 13:58:17 PDT
Fujii Hironori
Comment 5 2023-06-05 14:03:01 PDT
Note You need to log in before you can comment on or make changes to this bug.