[Curl] Enables proxy authentication processing during CONNECT requests https://bugs.webkit.org/show_bug.cgi?id=257705

Reviewed by Fujii Hironori.

Proxy authentication processing during CONNECT request is not working
since 256639@main. That's not the intended state, so re-enable the
feature.

* Source/WebCore/platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::didCompleteTransfer):

Canonical link: https://commits.webkit.org/264874@main